create function that removes annoying warning when .jar is run without enabling native access